--- a/FinalProject/FinalApp/templates/base.html
+++ b/FinalProject/FinalApp/templates/base.html
@@ -13,6 +13,11 @@
 <body>
 <div id="title">
     <p id = "home">좋은 날</p>
+    
+    <div class = "info">
+        <p id = "name">테스트</p>
+        <p id = "address">테스트</p>
+    </div>
 </div>
 
 {% block body %}
