--- a/FinalProject/FinalApp/static/css/base.css
+++ b/FinalProject/FinalApp/static/css/base.css
@@ -13,8 +13,8 @@ body {
 }
 #title {
     display: flex;
-    justify-content: flex-end;
-    align-items: flex-start;
+    flex-direction: column;
+    justify-content: space-between;
     width: 100%;
     height: 200px;
     font-size: 25px;    
@@ -22,7 +22,12 @@ body {
     color: white;
 }
 
-#title p {
+#title #home{
     font-family: '감성주점L';
     margin: 15px;
+    text-align: right;
+}
+#title .info{
+  font-family: 'Noto Sans KR', sans-serif;
+  font-size: 20px;
 }
